<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">便当记</string>
    <string name="year">Year</string>
    <string name="location">Location</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">bento box</string>
    <string name="nav_header_subtitle">soulocean</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ip">编辑ip及端口</string>
    <string name="menu_settle">取餐</string>
    <string name="menu_pay">支付</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">退出登录</string>
    <string name="menu_faceid">人脸注册</string>

</resources>